--- a/css/main.css
+++ b/css/main.css
@@ -10,7 +10,7 @@
 }
 
 body {
-  width: 1700px;
+  max-width: 1700px;
   margin: 0 auto;
 }
 body header {
@@ -42,7 +42,7 @@ body main .section1 {
   align-items: center;
   justify-content: center;
   background-image: url("../img/mountain-font.png");
-  width: 100%;
+  max-width: 100%;
   height: 878px;
 }
 body main .section1 .backImage {
@@ -59,7 +59,7 @@ body main .section1 .backImage div {
 }
 body main .section2 {
   height: 760px;
-  width: 100%;
+  max-width: 100%;
   display: flex;
   align-items: center;
 }
@@ -86,10 +86,7 @@ body main .section2 .section2Part1 .icons {
   margin-top: 75px;
   margin-left: 570px;
   display: flex;
-  flex-wrap: wrap;
-}
-body main .section2 .section2Part1 .icons div {
-  flex: 1 1 auto;
+  align-items: flex-end;
 }
 body main .section2 .section2Part1 .icons div .img {
   width: 36px;
@@ -103,7 +100,7 @@ body main .section2 .section2Part2 {
 }
 body main .section3 {
   background-image: url("../img/section3back.png");
-  width: 100%;
+  max-width: 100%;
   height: 933px;
   display: flex;
   flex-direction: column;
@@ -156,7 +153,7 @@ body main .section3 .email .button {
 }
 body main .section4 {
   background-color: white;
-  width: 100%;
+  max-width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -198,7 +195,7 @@ body main .section4 .icons div .textIcon3 {
   font-weight: bold;
 }
 body main .section5 {
-  width: 100%;
+  max-width: 100%;
   height: 755px;
   background-color: #efefef;
   background-image: url("../img/section5.png");
