--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,29 +1,30 @@
-*{
-  margin: 0;
-  padding: 0;
-}
 $buttonColor: #f69321;
 $width: 100%;
 $blackBorder: 2px black solid;
 $leftMargin: 40px;
+* {
+  margin: 0;
+  padding: 0;
+}
+
 .font {
   color: #ffffff;
   font-family: "Segoe UI", serif;
   text-align: center;
 }
-body{
-  width: 1700px;
+body {
+  max-width: 1700px;
   margin: 0 auto;
-  header{
+  header {
     height: 110px;
     display: flex;
     justify-content: space-between;
-    img{
+    img {
       margin: 20px 30px;
       width: 70px;
       height: 70px;
     }
-    .button{
+    .button {
       background-color: $buttonColor;
       color: white;
       text-decoration: none;
@@ -33,18 +34,18 @@ body{
       font-size: 20px;
     }
   }
-  main{
+  main {
     display: flex;
     flex-direction: column;
-    .section1{
+    .section1 {
       display: flex;
       flex-direction: column;
       align-items: center;
       justify-content: center;
       background-image: url("../img/mountain-font.png");
-      width: $width;
+      max-width: $width;
       height: 878px;
-      .backImage{
+      .backImage {
         background-image: url("../img/section1-back1.png");
         display: flex;
         flex-direction: column;
@@ -52,83 +53,80 @@ body{
         justify-content: center;
         width: 840px;
         height: 220px;
-        div{
+        div {
           font-size: 48px;
         }
       }
     }
-    .section2{
+    .section2 {
       height: 760px;
-      width: $width;
+      max-width: $width;
       display: flex;
       align-items: center;
-      .section2Part1{
+      .section2Part1 {
         width: 50%;
         height: 100%;
         display: flex;
         flex-direction: column;
         align-items: center;
         justify-content: center;
-        .title{
+        .title {
           font-size: 40px;
           color: #000000;
           align-self: center;
         }
-        .text{
+        .text {
           color: #666666;
           font-size: 20px;
           text-align: left;
           align-self: center;
         }
-        .icons{
+        .icons {
           margin-top: 75px;
           margin-left: 570px;
           display: flex;
-          flex-wrap: wrap;
-          div{
-             flex: 1 1 auto;
-             .img{
+          align-items: flex-end;
+          div .img {
                width:36px;
                height: 36px;
 
-             }
           }
         }
       }
-      .section2Part2{
+      .section2Part2 {
         background-image: url("../img/section2Part2.png");
         opacity: 80%;
         width: 50%;
         height: 100%;
       }
     }
-    .section3{
+    .section3 {
       background-image: url("../img/section3back.png");
-      width: $width;
+      max-width: $width;
       height: 933px;
       display: flex;
       flex-direction: column;
       align-items: flex-start;
-      .title{
+      .title {
         margin-top: 40px;
         margin-left: 40px;
         display: flex;
         flex-direction: column;
         text-align: left;
         font-size: 30px;
-        img{
+        img {
           margin-bottom: 25px;
         }
       }
-      label{
+      label {
         margin-left: 40px;
         margin-top: 70px;
         margin-bottom: 24px;
         font-size: 24px;
       }
-      .email{
+      .email {
         display: flex;
-        input{
+        input {
           background: none;
           border: 2px white solid;
           font-size: 20px;
@@ -139,12 +137,12 @@ body{
           font-weight: bold;
           text-indent: 20px;
         }
-        input::placeholder{
+        input::placeholder {
           color: white;
           font-size:20px;
           font-weight: bold;
         }
-        .button{
+        .button {
           background-color: $buttonColor;
           color: white;
           text-decoration: none;
@@ -155,28 +153,28 @@ body{
         }
       }
     }
-    .section4{
+    .section4 {
       background-color: white;
-      width: $width;
+      max-width: $width;
       display: flex;
       flex-direction: column;
       align-items: center;
       justify-content: center;
       text-align: center;
       color: black;
-      .title{
+      .title {
         margin-top: 125px;
         font-size: 60px;
       }
-      .title1{
+      .title1 {
         padding-top: 40px;
         font-size: 36px;
         font-style: normal;
       }
-      .text{
+      .text {
         font-size: 30px;
       }
-      .icons{
+      .icons {
         width: $width;
         display: flex;
         flex-direction: row;
@@ -185,21 +183,21 @@ body{
         margin-bottom: 125px;
         justify-content: space-evenly;
         flex-wrap: wrap;
-        div{
+        div {
           display: flex;
           flex-direction: column;
           align-items: center;
           justify-content: space-evenly;
           font-size: 30px;
-          .textIcon3{
+          .textIcon3 {
             font-size: 48px;
             font-weight: bold;
           }
         }
       }
     }
-    .section5{
-      width: $width;
+    .section5 {
+      max-width: $width;
       height: 755px;
       background-color: #efefef;
       background-image: url("../img/section5.png");
@@ -211,18 +209,18 @@ body{
       justify-content: center;
       color: black;
       text-align: left;
-      .title{
+      .title {
         font-size: 36px;
         margin-left: $leftMargin;
         margin-bottom: 60px;
       }
-      .text{
+      .text {
         margin-left: $leftMargin;
         font-size: 24px;
         margin-bottom: 20px;
       }
 
-      input{
+      input {
         margin-left: $leftMargin;
         width: 745px;
         height: 47px;
@@ -231,7 +229,7 @@ body{
         font-size: 20px;
         padding: 0 10px;
       }
-      textarea{
+      textarea {
         color: black;
         margin-left: $leftMargin;
         width: 745px;
@@ -243,7 +241,7 @@ body{
         resize: none;
         font-family: "Segoe UI", serif;
       }
-      a{
+      a {
         background-color: $buttonColor;
         color: white;
         text-decoration: none;
